# AMeta-solana

./: Anchor.toml  README.md  ametakeypair.json  keypair5.json  keypair6.json
programs/ameta/: Cargo.toml
programs/ameta/src/: error.rs  errors.rs  lib.rs  utils.rs
programs/ameta/src/intructions/: buy_box.rs  initialize_game.rs  initialize_rent_system.rs  initialize_starter_account.rs  make_new_fishing_rod_rent.rs  mod.rs  open_box.rs  rent_fishing_rod.rs  update_game.rs
programs/ameta/src/schema/: game_data.rs  mod.rs  rent_contract.rs  rent_system.rs  starter_account.rs
tests/: ameta.ts  utils.ts
